--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix front-end",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder.js",
-    "data:destroy": "node backend/seeder.js -d"
+    "data:destroy": "node backend/seeder.js -d",
+    "build": "npm install && npm install --prefix front-end && npm run build --prefix front-end"
   },
   "author": "Morgan Selbekk",
   "license": "MIT",
